# nuki_hub

./: .astylerc  .gitignore  .gitmodules  AccessLevel.h  CMakeLists.txt  CONTRIBUTING.md  CharBuffer.cpp  CharBuffer.h  Config.h  Config.h.save  ConfigUpdateResult.h  DUOAUTH.md  Dockerfile  Gpio.cpp  Gpio.h  HYBRID.md  LICENSE  LockActionResult.h  Logger.cpp  Makefile  MqttReceiver.h  MqttTopics.h  Network.cpp  Network.h  NetworkLock.cpp  NetworkLock.h  NetworkOpener.cpp  NetworkOpener.h  Nuki.cpp  Nuki.h  NukiDeviceId.h  NukiOpenerWrapper.cpp  NukiOpenerWrapper.h  NukiWrapper.cpp  NukiWrapper.h  Ota.cpp  Ota.h  Pins.h  PreferencesKeys.h  PresenceDetection.cpp  (+35 more)
.github/: FUNDING.yml  (+2 more)
clion/: CMakeLists.txt
lib/gpio2go/: CMakeLists.txt  LICENSE  README.md  main.cpp
lib/gpio2go/src/: Gpio2Go.cpp  Gpio2Go.h  InterruptMode.h  PinMode.h
resources/espressif__esp_hosted/: .component_hash  .editorconfig  .gitignore  .gitlab-ci-override-idf-component.yml  CMakeLists.txt  Kconfig  README.md  idf_component.yml  sdkconfig.rename
resources/espressif__esp_hosted/common/: esp_hosted_interface.h
resources/espressif__esp_hosted/common/proto/: esp_hosted_rpc.pb-c.h  esp_hosted_rpc.proto
resources/espressif__esp_hosted/docs/: bluetooth_design.md  design_consideration.md  esp32_p4_function_ev_board.md  performance_optimization.md  sdio.md  shield-box-test-setup.md  spi_full_duplex.md  spi_half_duplex.md  uart.md  wifi_design.md
resources/espressif__esp_hosted/examples/host_bluedroid_ble_compatibility_test/: README.md  ble_compatibility_test_case.md  sdkconfig.defaults
resources/espressif__esp_hosted/examples/host_bluedroid_ble_compatibility_test/main/: CMakeLists.txt  ble_compatibility_test.c
resources/espressif__esp_hosted/examples/host_bluedroid_bt_hid_mouse_device/: README.md  sdkconfig.defaults
resources/espressif__esp_hosted/examples/host_bluedroid_bt_hid_mouse_device/main/: CMakeLists.txt  idf_component.yml  main.c
resources/espressif__esp_hosted/examples/host_bluedroid_host_only/: README.md  sdkconfig.defaults
resources/espressif__esp_hosted/examples/host_bluedroid_host_only/main/: CMakeLists.txt  main.c
resources/espressif__esp_hosted/examples/host_nimble_bleprph_host_only_uart_hci/: README.md
resources/espressif__esp_hosted/examples/host_nimble_bleprph_host_only_uart_hci/main/: Kconfig.projbuild  uart_driver.c
resources/espressif__esp_hosted/examples/host_nimble_bleprph_host_only_uart_hci/tutorial/: bleprph_host_only_walkthrough.md
resources/espressif__esp_hosted/examples/host_nimble_bleprph_host_only_vhci/: README.md  sdkconfig.defaults
resources/espressif__esp_hosted/examples/host_nimble_bleprph_host_only_vhci/main/: idf_component.yml
resources/espressif__esp_hosted/external_examples/8d519870/slave/: ExtractVersion.cmake
resources/espressif__esp_hosted/host/: esp_hosted.h  esp_hosted_bt.h  esp_hosted_host_init.c  hosted_os_abstraction.h
resources/espressif__esp_hosted/host/api/include/: esp_hosted_api_types.h  esp_hosted_bt_config.h  esp_hosted_config.h  esp_hosted_ota.h  esp_hosted_transport_config.h  esp_hosted_wifi_remote_glue.h
resources/espressif__esp_hosted/host/api/priv/: esp_hosted_api_priv.h
resources/espressif__esp_hosted/host/api/src/: esp_hosted_api.c  esp_wifi_weak.c
resources/espressif__esp_hosted/host/drivers/bt/: hci_drv.h  hci_stub_drv.c  vhci_drv.c
resources/espressif__esp_hosted/host/drivers/mempool/: mempool.c  mempool.h
resources/espressif__esp_hosted/host/drivers/serial/: serial_drv.c  serial_ll_if.c  serial_ll_if.h
resources/espressif__esp_hosted/host/drivers/transport/: transport_drv.c  transport_drv.h
resources/espressif__esp_hosted/host/drivers/virtual_serial_if/: serial_if.c  serial_if.h
resources/espressif__esp_hosted/host/utils/: common.h  stats.c  stats.h
resources/espressif__esp_hosted/slave/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32c2
resources/espressif__esp_hosted/slave/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_main.h  sdio_slave_api.c  slave_bt.c  slave_bt.h  slave_bt_uart_esp32.c
resources/espressif__esp_wifi_remote/: .component_hash  .cz.yaml  CHANGELOG.md  CMakeLists.txt  Kconfig  Kconfig.rpc.in  esp_wifi_remote_net.c  idf_component.yml
resources/espressif__esp_wifi_remote/eppp/: eppp_init.c
resources/espressif__esp_wifi_remote/examples/: pytest_eppp.py
resources/espressif__esp_wifi_remote/examples/mqtt/: sdkconfig.ci.p4  sdkconfig.defaults
resources/espressif__esp_wifi_remote/examples/server/: sdkconfig.ci.c6  sdkconfig.defaults
resources/espressif__esp_wifi_remote/idf_tag_v5.3.1/: Kconfig.slave_select.in  Kconfig.wifi.in
resources/espressif__esp_wifi_remote/idf_tag_v5.3.1/include/: esp_wifi_remote_api.h
resources/espressif__esp_wifi_remote/idf_tag_v5.3.2/: Kconfig.soc_wifi_caps.in  Kconfig.wifi.in  esp_wifi_remote_weak.c  esp_wifi_with_remote.c
resources/espressif__esp_wifi_remote/idf_tag_v5.3.3/: Kconfig.wifi.in
resources/espressif__esp_wifi_remote/idf_tag_v5.4/: Kconfig.soc_wifi_caps.in  Kconfig.wifi.in  esp_wifi_remote_weak.c  esp_wifi_with_remote.c
resources/espressif__esp_wifi_remote/idf_tag_v5.4.1/: esp_wifi_with_remote.c
resources/espressif__esp_wifi_remote/idf_tag_v5.4/include/: esp_wifi_default_config.h  esp_wifi_remote_api.h
resources/espressif__esp_wifi_remote/idf_v5.3/: esp_wifi_remote_weak.c  esp_wifi_with_remote.c
resources/espressif__esp_wifi_remote/idf_v5.3/include/: esp_wifi_default_config.h
resources/espressif__esp_wifi_remote/idf_v5.4/: Kconfig.slave_select.in  Kconfig.soc_wifi_caps.in  Kconfig.wifi.in  esp_wifi_remote_weak.c
resources/espressif__esp_wifi_remote/idf_v5.5/: Kconfig.soc_wifi_caps.in  Kconfig.wifi.in  esp_wifi_remote_weak.c  esp_wifi_with_remote.c
resources/espressif__esp_wifi_remote/idf_v5.5/include/: esp_wifi_default_config.h  esp_wifi_remote_api.h
resources/espressif__esp_wifi_remote/scripts/: copyright_header.h  generate_and_check.py  generate_slave_configs.py
resources/espressif__esp_wifi_remote/test/smoke_test/: sdkconfig.defaults
updater/src/: CMakeLists.txt  idf_component.yml
(+1190 files in other folders)
